--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ python-multipart==0.0.6
 # Database
 sqlalchemy==2.0.23
 asyncpg==0.29.0
+psycopg2-binary==2.9.9
 alembic==1.13.0
 
 # Redis and Celery
@@ -56,6 +57,13 @@ pydantic>=2.7.4,<3.0.0
 pydantic-settings>=2.4.0
 httpx==0.25.2
 jinja2==3.1.2
+
+# Image processing and PDF generation (Publisher dependencies)
+opencv-python-headless>=4.8.0
+reportlab>=4.0.0
+Pillow>=10.0.0
+docker>=6.0.0
+markdown>=3.5.0
 
 # Development and testing
 pytest==7.4.3
