feat: organize test infrastructure and update gitignore
- Update .gitignore to exclude temporary test files and analysis documents
- Add systematic test infrastructure in tests/ directory with comprehensive agent testing
- Include essential utilities: get_dd_api_token.py, view_milvus_data.py, view_redis_data.py
- Add genre generator agent and DALL-E integration tools
- Add Python cache directories to gitignore for cleaner repository
- Preserve organized test framework while excluding ad-hoc development artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,12 @@ models/
 *.pkl
 *.pickle
 
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
 # Database
 *.db
 *.sqlite
@@ -83,3 +89,26 @@ CLAUDE.md
 
 # Documentation directory (local only)
 docs/
+
+# Test files and artifacts
+# Ad-hoc test scripts in root directory
+test_*.py
+# Test output and results
+test_results/
+*_test_results.json
+# Test image directories
+*_test_images/
+*_sample_images/
+final_test_images/
+# Analysis and planning documents (temporary)
+AGENT_TESTING_STRATEGY.md
+DALL-E_INTEGRATION_SUMMARY.md
+DATA_STORAGE_ANALYSIS.md
+DIGITALDOSSIER_AUTO_GENRE_CREATION_SPEC.md
+IMPLEMENTATION_PLAN.md
+LANGGRAPH_FIX_PLAN.md
+PIPELINE_ANALYSIS.md
+PIPELINE_ORCHESTRATION_STATUS.md
+BLOG_APP_MODULE_CONFLICT_RESOLUTION.md
+# Ad-hoc scripts
+redis_commands.sh
